/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14.5/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'

    id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Scala 2.13 in our library project
    implementation libs.scala.library

    implementation libs.spark.core
    implementation libs.spark.sql

    // This dependency is used by the application.
    implementation libs.guava

    // Use Scalatest for testing our library
    testImplementation libs.junit
    testImplementation libs.scalatest.v2.v13
    testImplementation libs.junit.v4.v13.v2.v13

    // Need scala-xml at test runtime
    testRuntimeOnly libs.scala.xml.v2.v13
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

def jvmOpenArgs = [
    "--add-opens=java.base/java.lang=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.io=ALL-UNNAMED",
    "--add-opens=java.base/java.net=ALL-UNNAMED",
    "--add-opens=java.base/java.nio=ALL-UNNAMED",
    "--add-opens=java.base/java.util=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
    "--add-opens=java.base/security=ALL-UNNAMED",
    "--add-opens=java.base/sun.security.action=ALL-UNNAMED"
]

task runPrintStatement(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.example.PrintStatement'
    jvmArgs = jvmOpenArgs
    errorOutput = System.err
    standardOutput = System.out
}

task runEx1(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.example.scala_native_data_modelling.Ex1'
    jvmArgs = jvmOpenArgs
    errorOutput = System.err
    standardOutput = System.out
}

task runEx2(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.example.scala_native_data_modelling.Ex2'
    jvmArgs = jvmOpenArgs
    errorOutput = System.err
    standardOutput = System.out
}

task runEx3(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.example.scala_native_data_modelling.Ex3'
    jvmArgs = jvmOpenArgs
    errorOutput = System.err
    standardOutput = System.out
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'

    // BLOCK TO SILENCE THE JVM WARNINGS:
    applicationDefaultJvmArgs = jvmOpenArgs
}

